--- a/css/main.css
+++ b/css/main.css
@@ -3573,6 +3573,9 @@ html.no-csstransitions .home-content__main {
         width: auto;
         margin-left: 50px;
     }
+    .timeline .timeline-item {
+        overflow-x: hidden;
+    }
     .timeline .timeline-item:nth-child(even) .timeline-content {
         float: none;
     }
