--- a/css/main.css
+++ b/css/main.css
@@ -2281,17 +2281,17 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 
 /* animate .home-content__main
  * ------------------------------------------------------------------- */
-html.cl-preload .home-content__main {
+html.cl-preload .home-content {
     opacity: 0;
 }
 
-html.cl-loaded .home-content__main {
+html.cl-loaded .home-content {
     animation-duration: 2s;
     -webkit-animation-name: fadeIn;
     animation-name: fadeIn;
 }
 
-html.no-csstransitions .home-content__main {
+html.no-csstransitions .home-content {
     opacity: 1;
 }
 
