Contact form fixed to allow for resubmittion

--- a/css/main.css
+++ b/css/main.css
@@ -4258,7 +4258,7 @@ footer .row {
         padding-left: 10px;
     }
     .footer-logo {
-        margin: -.6rem auto 3.6rem;
+        margin: -0rem auto 3.6rem;
     }
     .footer-bottom {
         padding-bottom: .6rem;
