clients becomes companies

--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@
  *      ## education list
  *  # works
  *      ## bricks/masonry
- *  # clients
+ *  # companies
  *      ## slider
  *      ## testimonials
  *  # contact
@@ -1627,9 +1627,10 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 }
 
 @media only screen and (max-width: 800px) {
-    .s-clients {
+    .s-companies {
         padding-bottom: 17.4rem;
     }
+
     .section-header.has-bottom-sep::before {
         width: 400px;
     }
@@ -3199,12 +3200,11 @@ html.no-csstransitions .home-content {
 }
 
 
-
 /* ===================================================================
- * # clients
+ * # companies
  *
  * ------------------------------------------------------------------- */
-.s-clients {
+.s-companies {
     padding-top: 16.2rem;
     padding-bottom: 16.8rem;
     background-color: #e6e6e6;
@@ -3424,7 +3424,7 @@ html.no-csstransitions .home-content {
 /* -------------------------------------------------------------------
  * ## slider
  * ------------------------------------------------------------------- */
-.clients-outer {
+.companies-outer {
     margin-top: 3.6rem;
     padding-bottom: 9rem;
     text-align: center;
@@ -3440,7 +3440,7 @@ html.no-csstransitions .home-content {
     margin: 0 auto;
 }
 
-.clients__slide {
+.companies__slide {
     display: block;
     opacity: .55;
     padding: 1.5rem 2.8rem;
@@ -3448,7 +3448,7 @@ html.no-csstransitions .home-content {
     transition: opacity 0.5s ease-in-out;
 }
 
-.clients__slide:hover, .clients__slide:focus {
+.companies__slide:hover, .companies__slide:focus {
     opacity: 1;
 }
 
@@ -3456,14 +3456,14 @@ html.no-csstransitions .home-content {
 /* -------------------------------------------------------------------
  * ## testimonials
  * ------------------------------------------------------------------- */
-.clients-testimonials {
+.companies-testimonials {
     margin-top: 4.2rem;
     padding-top: 7.2rem;
     text-align: center;
     position: relative;
 }
 
-.clients-testimonials::before {
+.companies-testimonials::before {
     content: "";
     display: block;
     height: 1px;
@@ -3478,11 +3478,11 @@ html.no-csstransitions .home-content {
     transform: translateX(-50%);
 }
 
-.clients-testimonials .testimonials {
+.companies-testimonials .testimonials {
     margin: 0 10%;
 }
 
-.clients-testimonials .testimonials p {
+.companies-testimonials .testimonials p {
     font-family: "lora-regular", serif;
     font-size: 3rem;
     line-height: 1.8;
@@ -3490,33 +3490,33 @@ html.no-csstransitions .home-content {
     margin-bottom: 6rem;
 }
 
-.clients-testimonials .testimonials__slide {
+.companies-testimonials .testimonials__slide {
     padding: 0 0 3rem 0;
 }
 
-.clients-testimonials .testimonials__avatar {
+.companies-testimonials .testimonials__avatar {
     height: 8.4rem;
     width: 8.4rem;
     border-radius: 50%;
     margin: 0 auto 1.2rem auto;
 }
 
-.clients-testimonials .testimonials__name,
-.clients-testimonials .testimonials__pos {
+.companies-testimonials .testimonials__name,
+.companies-testimonials .testimonials__pos {
     display: block;
 }
 
-.clients-testimonials .testimonials__name {
+.companies-testimonials .testimonials__name {
     font-family: "montserrat-semibold", sans-serif;
     color: #000000;
 }
 
-.clients-testimonials .testimonials__pos {
+.companies-testimonials .testimonials__pos {
     font-family: "montserrat-light", sans-serif;
     font-size: 1.4rem;
 }
 
-.clients-testimonials .testimonials .slick-arrow {
+.companies-testimonials .testimonials .slick-arrow {
     position: absolute;
     top: 7.2rem;
     width: 66px;
@@ -3536,78 +3536,89 @@ html.no-csstransitions .home-content {
     z-index: 2;
 }
 
-.clients-testimonials .testimonials .slick-prev {
+.companies-testimonials .testimonials .slick-prev {
     left: -130px;
     background-image: url("../images/left-arrow.png");
 }
 
-.clients-testimonials .testimonials .slick-next {
+.companies-testimonials .testimonials .slick-next {
     right: -130px;
     background-image: url("../images/right-arrow.png");
 }
 
-.clients-testimonials .testimonials .slick-dots {
+.companies-testimonials .testimonials .slick-dots {
     margin-top: -0.6px;
 }
 
 
 /* -------------------------------------------------------------------
  * responsive:
- * clients
+ * companies
  * ------------------------------------------------------------------- */
 @media only screen and (max-width: 1200px) {
-    .clients-testimonials .testimonials {
+    .companies-testimonials .testimonials {
         margin: 0 12%;
     }
-    .clients-testimonials .testimonials p {
+
+    .companies-testimonials .testimonials p {
         font-size: 2.6rem;
     }
-    .clients-testimonials .testimonials .slick-prev {
+
+    .companies-testimonials .testimonials .slick-prev {
         left: -100px;
     }
-    .clients-testimonials .testimonials .slick-next {
+
+    .companies-testimonials .testimonials .slick-next {
         right: -100px;
     }
 }
 
 @media only screen and (max-width: 1000px) {
-    .clients-testimonials .testimonials p {
+    .companies-testimonials .testimonials p {
         font-size: 2.2rem;
     }
 }
 
 @media only screen and (max-width: 800px) {
-    .clients-testimonials::before {
+    .companies-testimonials::before {
         width: 400px;
     }
-    .clients-testimonials .testimonials {
+
+    .companies-testimonials .testimonials {
         margin: 0 2rem;
     }
-    .clients-testimonials .testimonials .slick-arrow {
+
+    .companies-testimonials .testimonials .slick-arrow {
         top: auto;
         bottom: 3rem;
     }
-    .clients-testimonials .testimonials .slick-prev {
+
+    .companies-testimonials .testimonials .slick-prev {
         left: 0;
     }
-    .clients-testimonials .testimonials .slick-next {
+
+    .companies-testimonials .testimonials .slick-next {
         right: 0;
     }
 }
 
 @media only screen and (max-width: 600px) {
-    .s-clients {
+    .s-companies {
         padding-top: 12rem;
     }
-    .clients-testimonials::before {
+
+    .companies-testimonials::before {
         width: 250px;
     }
-    .clients-testimonials .testimonials {
+
+    .companies-testimonials .testimonials {
         margin: 0;
     }
-    .clients-testimonials .testimonials p {
+
+    .companies-testimonials .testimonials p {
         font-size: 2rem;
     }
+
     .timeline-middle-line {
         left: 30px;
     }
@@ -3653,7 +3664,7 @@ html.no-csstransitions .home-content {
 }
 
 @media only screen and (max-width: 400px) {
-    .clients-testimonials .testimonials p {
+    .companies-testimonials .testimonials p {
         font-size: 1.9rem;
     }
 }
